# QQMusicCopy

./: .gitignore  CMakeLists.txt  QTMusic.pro  README.md  _.rc  codeNote.txt  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
qss/: style.css
resource/json/: getmv_by_tag.json  music_ranking.json  music_selected.json  music_singer.json  radar.json  video.json  video_library.json  video_ranking.json
resource/qss/: downInfo.qss  handleMenu.qss  hotSearch.qss  houseRanking.qss  houseSelected.qss  houseSinger.qss  musicHouse.qss  radar.qss  recommend.qss  settMenu.qss  songInfo.qss  style.qss  topMenu.qss  videoLibrary.qss  videoRanking.qss  videoRecom.qss
src/: mainwindow.cpp  mainwindow.h
src/header/: container.h  mainwindow.h  rightMenu.h
src/lib/: container.cpp  container.h  houseRanking.cpp  houseRanking.h  houseSelected.cpp  houseSelected.h  houseSinger.cpp  houseSinger.h  musicHouse.cpp  musicHouse.h  radar.cpp  radar.h  recommend.cpp  recommend.h  rightMenu.cpp  rightMenu.h  topMenu.cpp  topMenu.h  videoContent.cpp  videoContent.h  videoLibrary.cpp  videoLibrary.h  videoRanking.cpp  videoRanking.h  videoRecom.cpp  videoRecom.h
src/lib/popup/: downInfo.cpp  downInfo.h  handleMenu.cpp  handleMenu.h  hotSearch.cpp  hotSearch.h  settMenu.cpp  settMenu.h  songInfo.cpp  songInfo.h
src/source/: container.cpp  mainwindow.cpp  rightMenu.cpp
src/utils/: tools.cpp  tools.h
